--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@ main {
 }
 .en-decode-btns-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
     margin: 2rem 0; 
